removing hypothesis branding from pages

--- a/h/templates/includes/logo-header.html.jinja2
+++ b/h/templates/includes/logo-header.html.jinja2
@@ -1,4 +1,3 @@
 <header class="masthead">
-  <a href="/" title="Hypothesis homepage"><!--
-    !-->{{ svg_icon('logo', 'masthead-logo') }}</a>
+  <a href="/" title="Travrse homepage"></a>
 </header>
