--- a/h/templates/includes/share_widget.html.jinja2
+++ b/h/templates/includes/share_widget.html.jinja2
@@ -3,7 +3,7 @@
 <div class="share-widget js-share-widget-owner">
   <div class="share-widget-target">
     <span class="share-widget-target__label">Share:</span>
-    <a share-target-href="https://twitter.com/intent/tweet?url={href}&hashtags=annotated"
+    <a share-target-href="https://twitter.com/intent/tweet?url={href}&hashtags=travrse"
       target="_blank"
       title="Tweet link"
       class="share-widget-target__icon">
@@ -43,13 +43,13 @@
     <span class="share-widget-msg__audience">
       Group.
     </span>
-    Only group members will be able to view this annotation.
+    Only group members will be able to view this discussion.
   </div>
   <div class="share-widget-msg share-widget-msg-private js-share-widget-msg-private">
     <span class="share-widget-msg__audience">
       Only me.
     </span>
-    No one else will be able to view this annotation.
+    No one else will be able to view this discussion.
   </div>
 </div>
 {%- endmacro %}
