remove ORCID number from profile

--- a/h/templates/layouts/admin.html.jinja2
+++ b/h/templates/layouts/admin.html.jinja2
@@ -33,7 +33,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <title>
-      Hypothesis: {{ page_title }}
+      Travrse: {{ page_title }}
     </title>
 
   {% for url in asset_urls("admin_css") %}
