--- a/h/templates/accounts/claim_account_legacy.html.jinja2
+++ b/h/templates/accounts/claim_account_legacy.html.jinja2
@@ -10,7 +10,6 @@
       Sorry, your claim link has expired. If you still wish to claim a username
       you reserved, please contact us at
       <a href="mailto:support@hypothes.is?Subject=Claim%20my%20username">
-        support@hypothes.is</a>.
+        support@travr.se</a>.
   </div>
 {% endblock content %}
-
