--- a/h/templates/accounts/developer.html.jinja2
+++ b/h/templates/accounts/developer.html.jinja2
@@ -4,36 +4,12 @@
 {% set page_title = 'Developer' %}
 
 {% block page_content %}
-  <div class="form-vertical">
-    {% if token %}
-      <p class="form-help-text">
-      <label for="token">{% trans %}Your API token is:{% endtrans %}</label>
-      </p>
-      <input id="token"
-             type="text"
-             value="{{ token }}"
-             readonly="readonly"
-             class="api-token">
-      <p class="form-help-text">
-        Please keep your API token safe as it can be used to access your account.
-      </p>
-    {% endif %}
-
-      <form method="POST">
-        {% if token %}
-          <button type="submit" class="btn"
-                  title="{% trans %}Delete your API token and generate a new one{% endtrans%}">
-            Regenerate your API token
-          </button>
-        {% else %}
-          <button type="submit" class="btn btn-primary">
-            {% trans %}Generate your API token{% endtrans %}
-          </button>
-        {% endif %}
-      </form>
-      <footer class="form-footer">
-        You can learn more about the Hypothesis API at
-        <a class="link--footer" href="https://h.readthedocs.io/en/latest/api.html">h.readthedocs.io/en/latest/api.html</a>
-      </footer>
+  <div class="form-container">
+    <h1 class="form-header">Contribute to Travrse</h1>
+    <p>
+      If you're interested in hacking on Travrse with us, send us an email at
+      <a href="mailto:developers@hypothes.is?Subject=Help%20With%20Travrse">
+        developers@travr.se</a>.
   </div>
+
 {% endblock page_content %}
