--- a/h/templates/panels/navbar.html.jinja2
+++ b/h/templates/panels/navbar.html.jinja2
@@ -27,7 +27,7 @@
     {{ lozenge('','') }}
   </template>
   <div class="nav-bar__content">
-    <a href="https://travr.se/" title="Travrse homepage" class="nav-bar__logo-container"><!--
+    <a href="https://www.travr.se/" title="Travrse homepage" class="nav-bar__logo-container"><!--
       !-->{{ svg_icon('color_logo_with_background', 'nav-bar__logo') }}</a>
 
 
@@ -56,7 +56,7 @@
 
           <input class="search-bar__input js-input-autofocus"
                  aria-autocomplete="list"
-                 aria-label="{{ _('Search annotations') }}"
+                 aria-label="{{ _('Search Discussions') }}"
                  aria-haspopup="true"
                  autocapitalize="off"
                  autocomplete="off"
