--- a/h/templates/5xx.html.jinja2
+++ b/h/templates/5xx.html.jinja2
@@ -59,10 +59,10 @@
   <body>
   <main class="content paper styled-text page">
     <img id="graphic" src="{{ asset_url('images/sad-annotation.svg') }}" />
-    <h1>Uh-oh, something went wrong!</h1>
+    <h1>Welp, that didn't go as planned!</h1>
     <p>We&rsquo;re very sorry, our application wasn&rsquo;t able to load this page. The
        team has been notified and we&rsquo;ll&nbsp;fix&nbsp;it&nbsp;shortly.</p>
-    <p>If the problem persists or you'd like more information please contact&nbsp;<a href="mailto:support@hypothes.is?subject=Internal%20Server%20Error%20on%20Hypothes.is">support@hypothes.is</a>.</p>
+    <p>If the problem persists or you'd like more information please contact&nbsp;<a href="mailto:support@travr.se?subject=Internal%20Server%20Error%20on%20Travr.se">support@travr.se</a>.</p>
   </main>
   </body>
 </html>
