update a flag notification to reference a message, not an annotation

--- a/h/templates/emails/flag_notification.html.jinja2
+++ b/h/templates/emails/flag_notification.html.jinja2
@@ -6,7 +6,7 @@
     https://mandrill.zendesk.com/hc/en-us/articles/205582927
 #}
 <p>
-An annotation  has been flagged. Please visit
+An message  has been flagged. Please visit
 <a href="{{incontext_link}}" mc:disable-tracking>{{incontext_link}}</a>
 for more details.
 </p>
