more routing stuff

--- a/h/templates/privacy.html.jinja2
+++ b/h/templates/privacy.html.jinja2
@@ -173,7 +173,7 @@
           </div>
         </section>
         <section class="help-page-section">
-          <h2 id="key-features" class="help-page-heading">E-mail Communications & How to Opt-Out</h2>
+          <h2 id="key-features" class="help-page-heading">E-mail Communications and How to Opt-Out</h2>
           <div class="feature-content">
             <div class="feature-content styled-text">From time to time, we may contact you via email for the purpose of providing news, announcements, alerts, confirmations, surveys, and/or other general communication. 
             In order to improve our services, we may receive notifications when you open, forward, or click on links in emails from us. Please note that email communications from us about our services or messages beyond 
