more privacy routing

--- a/h/templates/privacy.html.jinja2
+++ b/h/templates/privacy.html.jinja2
@@ -7,8 +7,8 @@
   {{ super() }}
   <script type="application/json" class="js-hypothesis-config">
     {
-      "openSidebar": true,
-      "openLoginForm": true
+      "openSidebar": false,
+      "openLoginForm": false
     }
   </script>
 {% endblock %}
