--- a/h/templates/includes/footer.html.jinja2
+++ b/h/templates/includes/footer.html.jinja2
@@ -7,7 +7,7 @@
     <div class="footer__rows">
       <ul class="footer__row">
         <li class="footer__item footer__item--last">
-          <a href="{{ request.route_url('privacy') }}">{% trans %}Privacy Policy{% endtrans %}</a>
+          <a href="{{ https://docs.google.com/document/d/1vsfbX_fiidQRw_JCuiDreEU4E4CLOZx-b8NvF779bEk/edit?usp=sharing }}">{% trans %}Privacy Policy{% endtrans %}</a>
         </li>
       </ul>
     </div>
