final tweak to sidebar tutorial

--- a/h/templates/help.html.jinja2
+++ b/h/templates/help.html.jinja2
@@ -99,7 +99,7 @@
         <section class="feature">
           <h3 class="feature-heading"><i class="feature-icon h-icon-share"></i>Sharing a page</h3>
           <div class="feature-content">
-            <p>Use the <i class="help-icon h-icon-share"></i> button to get a sharable link to the page with annotations.</p>
+            <p>Use the <i class="help-icon h-icon-share"></i> button to get a sharable link to the page with discussions.</p>
           </div>
         </section>
       </section>
