--- a/h/templates/groups/join.html.jinja2
+++ b/h/templates/groups/join.html.jinja2
@@ -7,7 +7,7 @@
     <h1 class="form-header">Group invitation</h1>
 
     <p class="join-group-form__label">
-      You've been invited to join the annotation group:
+      You've been invited to join the private group:
     </p>
 
     <div class="join-group-form__container">
