updated signup flow to remove hypothesis and tos

--- a/h/templates/accounts/signup.html.jinja2
+++ b/h/templates/accounts/signup.html.jinja2
@@ -10,7 +10,7 @@ Sign up for Travrse
 
 {% block content %}
 <div class="form-container content">
-  <h1 class="form-header">Sign up for Hypothesis</h1>
+  <h1 class="form-header">Sign up for Travrse</h1>
   {{ form }}
   <footer class="form-footer">
     Already have an account?
