update homepage language

--- a/h/templates/activity/search.html.jinja2
+++ b/h/templates/activity/search.html.jinja2
@@ -421,14 +421,14 @@
               <li class="search-result-zero__list-item"><!--
                 !--><a class="link"
                        href="{{ request.route_url('chrome-extension') }}">
-                  {%- trans %}Install our Chrome extension to post a message{% endtrans -%}
+                  {%- trans %}Install our Chrome extension to curate documents and add discussion/insight layers.{% endtrans -%}
                 </a>
               </li>
               <li class="search-result-zero__list-item">
                 {%- trans url=request.route_url('group_create') -%}
                   To start team discussions
                   <a class="link" href="{{ url }}"> 
-                    create a new group or two.
+                    create a new group.
                   </a>
                 {%- endtrans -%}
               </li>
