fix formatting on initial setup steps

--- a/h/templates/activity/search.html.jinja2
+++ b/h/templates/activity/search.html.jinja2
@@ -421,7 +421,7 @@
               <li class="search-result-zero__list-item"><!--
                 !--><a class="link"
                        href="{{ request.route_url('chrome-extension') }}">
-                  {%- trans %}Install our Chrome extension to curate documents and add discussion/insight layers.{% endtrans -%}
+                  {%- trans %}Install the Travrse Chrome extension {% endtrans -%} to curate documents and add discussion/insight layers.
                 </a>
               </li>
               <li class="search-result-zero__list-item">
