--- a/h/templates/panels/navbar.html.jinja2
+++ b/h/templates/panels/navbar.html.jinja2
@@ -27,7 +27,7 @@
     {{ lozenge('','') }}
   </template>
   <div class="nav-bar__content">
-    <a href="https://h.travr.se/search" title="Travrse homepage" class="nav-bar__logo-container"><!--
+    <a href="https://travr.se/search" title="Travrse homepage" class="nav-bar__logo-container"><!--
       !-->{{ svg_icon('color_logo_with_background', 'nav-bar__logo') }}</a>
 
 
