point search page towards new logo

--- a/h/templates/panels/navbar.html.jinja2
+++ b/h/templates/panels/navbar.html.jinja2
@@ -28,7 +28,7 @@
   </template>
   <div class="nav-bar__content">
     <a href="https://travr.se/search" title="Travrse homepage" class="nav-bar__logo-container"><!--
-      !-->{{ svg_icon('color_logo_with_background', 'nav-bar__logo') }}</a>
+      !-->{{ svg_icon('logo', 'nav-bar__logo') }}</a>
 
 
     <div class="nav-bar__search js-search-bar" data-ref="searchBar">
