more ridiculous logo stuff

--- a/h/templates/panels/navbar.html.jinja2
+++ b/h/templates/panels/navbar.html.jinja2
@@ -27,8 +27,8 @@
     {{ lozenge('','') }}
   </template>
   <div class="nav-bar__content">
-    <a href="https://travr.se/search" title="Travrse homepage" class="nav-bar__logo-container"><!--
-      !-->{{ svg_icon('logo', 'nav-bar__logo') }}</a>
+    <a href="https://travr.se/search" title="Travrse homepage" class="nav-bar__logo-container">
+      {{ svg_icon('logo', 'nav-bar__logo') }}</a>
 
 
     <div class="nav-bar__search js-search-bar" data-ref="searchBar">
