resize nav bar logo

--- a/h/static/styles/partials/_nav-bar.scss
+++ b/h/static/styles/partials/_nav-bar.scss
@@ -25,6 +25,8 @@
 }
 
 .nav-bar__logo-container {
+  height: 40px;
+  width: 40px; 
   display: flex;
   align-items: center;
   justify-content: center;
