a tiny bit of margin to the right of logo

--- a/h/static/styles/partials/_nav-bar.scss
+++ b/h/static/styles/partials/_nav-bar.scss
@@ -27,6 +27,7 @@
 .nav-bar__logo-container {
   height: 40px;
   width: 40px; 
+  margin-right: 7px;
   display: flex;
   align-items: center;
   justify-content: center;
