update help page language

--- a/h/templates/help.html.jinja2
+++ b/h/templates/help.html.jinja2
@@ -30,7 +30,7 @@
         <section class="help-page-section">
           <h2 id="getting-started" class="help-page-heading">Getting started</h2>
           <p class="help-page-lede">Now you have the extension up and running. It's time to
-            start discussing some documents.</p>
+            start create your team's library.</p>
           <div class="numbered-list columns">
             <div class="columns__col-1-2"><div class="numbered-list-item">If you've not already, create an account using the sidebar on the right of the screen.</div></div>
             <div class="columns__col-1-2"><div class="numbered-list-item">Go forth and discuss! Enable the sidebar via the button in the Extensions toolbar.</div></div>
@@ -38,18 +38,18 @@
         </section>
       {% endif %}
       <section class="help-page-section">
-        <h2 id="key-features" class="help-page-heading">Message Types</h2>
-        <p class="help-page-lede">There are a few types of discussions that can be created
+        <h2 id="key-features" class="help-page-heading"> Types of Information Layers</h2>
+        <p class="help-page-lede">There are a few ways to create discussion and insight layers
           with Travrse:</p>
         <div class="feature-content">
           <section class="feature">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-annotate"></i> Discussions</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-annotate"></i> Insight Layer</h3>
             <div class="feature-content styled-text">
-              <p>Create a <em>public or private message</em> by selecting some text and clicking the <i class="help-icon h-icon-annotate"></i> button</p>
+              <p>Create a <em>public or private insights</em> by selecting some text and clicking the <i class="help-icon h-icon-annotate"></i> button</p>
             </div>
           </section>
           <section class="feature">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-reply"></i> Replies</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-reply"></i> Discussions</h3>
             <div class="feature-content">
               <p>You can  <em>reply</em> to any message by using the <i class="help-icon h-icon-reply"></i> reply action
                 on every card.</p>
