update logo url to be https

--- a/h/templates/panels/navbar.html.jinja2
+++ b/h/templates/panels/navbar.html.jinja2
@@ -29,7 +29,7 @@
   <div class="nav-bar__content">
     
     <a href="https://travr.se/search" title="Travrse homepage" class="nav-bar__logo-container"><!--
-      !--><img src="http://travr.se/organizations/__default__/logo" alt="Organization logo" class="nav-bar__logo-container"></a>
+      !--><img src="https://travr.se/organizations/__default__/logo" alt="Organization logo" class="nav-bar__logo-container"></a>
 
 
     <div class="nav-bar__search js-search-bar" data-ref="searchBar">
