update landing page text

--- a/h/templates/activity/search.html.jinja2
+++ b/h/templates/activity/search.html.jinja2
@@ -421,13 +421,12 @@
               <li class="search-result-zero__list-item"><!--
                 !--><a class="link"
                        href="{{ request.route_url('chrome-extension') }}">
-                  {%- trans %}Install the Travrse Chrome extension {% endtrans -%} 
-                  to curate documents and add discussion/insight layers.
+                  {%- trans %}Install the Travrse Chrome extension to curate documents and add discussion/insight layers. {% endtrans -%} 
                 </a>
               </li>
               <li class="search-result-zero__list-item">
                 {%- trans url=request.route_url('group_create') -%}
-                  To start team discussions
+                  To start team based curation and discussions
                   <a class="link" href="{{ url }}"> 
                     create a new group.
                   </a>
