--- a/h/templates/panels/navbar.html.jinja2
+++ b/h/templates/panels/navbar.html.jinja2
@@ -28,7 +28,7 @@
   </template>
   <div class="nav-bar__content">
     
-    <a href="https://travr.se/search" title="Travrse homepage" class="nav-bar__logo-container"><!--
+    <a href="{{ request.route_url('activity.search') }}" title="Travrse homepage" class="nav-bar__logo-container"><!--
       !--><img src="https://travr.se/organizations/__default__/logo" alt="Organization logo" class="nav-bar__logo-container"></a>
 
 
