--- a/h/templates/panels/navbar.html.jinja2
+++ b/h/templates/panels/navbar.html.jinja2
@@ -29,7 +29,7 @@
   <div class="nav-bar__content">
     
     <a href="{{ request.route_url('activity.search') }}" title="Travrse homepage" class="nav-bar__logo-container"><!--
-      !--><img src="https://travr.se/organizations/__default__/logo" alt="Organization logo" class="nav-bar__logo-container"></a>
+      !-->{{ svg_icon('logo', 'nav-bar__logo-container') }}</a>
 
 
     <div class="nav-bar__search js-search-bar" data-ref="searchBar">
